--- a/index.html
+++ b/index.html
@@ -5,17 +5,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="index, follow">
         <style>
+            html {
+                box-sizing: border-box;
+            }
+
+            *, *:before, *:after {
+                box-sizing: inherit;
+            }
+
+            head {
+                display: none;
+            }
+
             body {
                 background: black;
                 display: grid;
-                gap: 1rem;
-                grid-template-columns: minmax(10vw, auto)  1fr;
-                grid-template-areas: 
-                    "header header"
-                    "form main"
-                    "footer footer";
                 justify-items: center;
-                margin: 1rem;
                 padding: 0;
             }
 
@@ -34,6 +39,7 @@
                 display: grid;
                 gap: 1rem;
                 grid-area: form;
+                min-width: 260px;
                 padding: 1rem;
             }
 
@@ -41,6 +47,22 @@
                 display: grid;
                 gap: 1rem;
                 grid-auto-flow: row;
+            }
+
+            #words-container,
+            #case-options {
+                justify-content: center;
+            }
+
+            #case-options {
+                display: flex;
+                gap: 1rem;
+            }
+
+            button,
+            input[type="radio"],
+            label {
+                cursor: pointer;
             }
 
             input {
@@ -61,11 +83,38 @@
                 display: grid;
                 justify-content: center;
                 outline: 1px solid black;
-                padding: 1rem;
             }
 
             .cheat .placeholder {
                 color: red;
+            }
+
+            @media screen and (max-width: 960px) {
+                body {
+                    grid-template-areas: "header" "form" "main" "footer";
+                    margin: 0;
+                }
+
+                form {
+                    width: 100%;
+                }
+
+                .letter {
+                    padding: 0.2rem;
+                }
+            }
+
+            @media screen and (min-width: 961px) {
+                body {
+                    gap: 1rem;
+                    grid-template-areas:  "header header" "form main" "footer footer";
+                    grid-template-columns: minmax(10vw, auto)  1fr;
+                    margin: 1rem;
+                }
+
+                .letter {
+                    padding: 1rem;
+                }
             }
         </style>
     </head>
@@ -309,10 +358,13 @@
                 input.focus();
             });
 
-            wordsContainer.addEventListener('click', (event) => {                
-                const parentElement = event.target.parentElement;
+            wordsContainer.addEventListener('click', (event) => {
+                console.log('event.target', event.target);
+                if (event.target.classList.contains('remove-word-button')) {
+                    const parentElement = event.target.parentElement;
 
-                parentElement.remove();
+                    parentElement.remove();
+                }
             });
 
             cheatButton.addEventListener('click', (event) => {
